* Author: Mike FABIAN <mfabian@redhat.com>
* 17 Jul 2019 Released 2.6.4 version
* Update translations from zanata (cs updated, now 100% complete)
* Do not crash if initializing enchant or pyhunspell fails, continue without spellchecking
* Try to install myspell-xx_YY packages instead of hunspell-xx package on SUSE
* Fix loading of cldr annotations when the .xml files are zipped
* Add JoyPixels to good_emoji_fonts list

* Author: Mike FABIAN <mfabian@redhat.com>
* 19 Jun 2019 Released 2.6.3 version
* Performance improvement of around 30% in EmojiMatcher._match()
* Tiny performance improvement in itb_emoji.py _set_seq1()

* Author: Mike FABIAN <mfabian@redhat.com>
* 06 Jun 2019 Released 2.6.2 version
* Emoji ZWJSequence “people holding hands” is 12.0, not 10.0
* Update emoji annotations from CLDR
* icons: Regenerate with proper transparency (Thanks to FeRD (Frank Dana))
* Remove enable-background from icon SVG (Thanks to FeRD (Frank Dana))
* Update UnicodeData.txt to current Unicode 12.1.0

* Author: Mike FABIAN <mfabian@redhat.com>
* 06 May 2019 Released 2.6.1 version
* Support emoji presentation and text presentation in emoji-picker
* Improve itb_emoji.py to also support text presentation of emoji
* Update emoji annotations from CLDR

* Author: Mike FABIAN <mfabian@redhat.com>
* 01 Mar 2019 Released 2.6.0 version
* Update translations from zanata (de, es, fr, pl, uk updated)
* Update emoji annotations from CLDR
* When Left or BackSpace trigger a commit, forward Left events only when no candidate was selected (i.e. the preëdit was committed)
* If a candidate is shown inline and *manually* selected, show the caret at the end of the candidate
* Right, Left, BackSpace, and Delete edit the preëdit only if no candidate is *manually* selected
* If an input char is typed while a candidate is *manually* selected, add that input to the candidate
* Change option name 'Add a space when committing by label or mouse' in setup tool
* Remove option “Use digits as select keys”