@@ -19,6 +19,21 @@
   <url type="bugtracker">https://github.com/mike-fabian/ibus-typing-booster/issues</url>
   <url type="help">https://mike-fabian.github.io/ibus-typing-booster/documentation.html</url>
   <releases>
+    <release version="2.6.5" date="2019-08-28" urgency="medium">
+      <description>
+        <ul>
+          <li>
+            Added Dutch translation (Thanks to Heimen Stoffels)
+          </li>
+          <li>
+            Add si-sayura to the list of M17N input methods
+          </li>
+          <li>
+            Add more test cases for m17n_translit.py, especially for si-sayura.mim
+          </li>
+        </ul>
+      </description>
+    </release>
     <release version="2.6.4" date="2019-07-17" urgency="medium">
       <description>
         <ul>
